bk_ida/gobmkida/c1/free_test_array
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/free_test_array/src/patterns/dfa.c:1217:44: error: use of undeclared identifier 'sgffile'
free_entry_list( *( entry_t **)( ( char *)&sgffile + v1)); 
                                           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/free_test_array/src/patterns/dfa.c:1218:24: error: use of undeclared identifier 'sgffile'
*( FILE **)( ( char *)&sgffile + v1) = 0LL; 
                       ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/free_test_array/src/obj/3/dfa.o] Error 1
